# ros_geofence

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: mapviz.mvc  params.yaml  zone.geojson
include/ros_geofence/: fake_robot.hpp  filter_mask_generator.hpp  zone_checker.hpp
launch/: bringup.launch.py  costmap_filter.launch.py  fake_robot.launch.py  generate_filter_mask.launch.py  mapviz.launch.py  zone_checker.launch.py
src/: fake_robot.cpp  filter_mask_generator.cpp  zone_checker.cpp
