<?xml version="1.0"?>
<package format="3">
  <name>ros_geofence</name>
  <version>1.0.0</version>
  <description>ROS 2 package for geofence zone checking</description>
  <maintainer email="lytvdan@gmail.com">Danylo Lytvynenko</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>proj</depend>

  <exec_depend>mapviz</exec_depend>
  <exec_depend>mapviz_plugins</exec_depend>
  <exec_depend>swri_transform_util</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>